typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES5.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            69,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES5.ts:4:5
  |
4 |     ["" + ""](): void;
  |     ^^^^^^^^^^^^^^^^^^

